# FIT-STRONG

./: .gitignore  LICENSE  README.md  constitution.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
docs/: APP_PVA.md  EVIDENCE.md  PVA.md  TRACEABILITY.md  fitstrong_combinaties_vrouw_tabellen_grafieken.docx  voedingslijst_vrouw_gevoelige_dikke_darm.docx
examples/: sample_combination_request.json  sample_cycle_diary.json  sample_cycle_report.html  sample_diary.json  sample_high_protein_meal.json  sample_report.html  sample_supplement_stack.json
scripts/: bob_ready.mjs  bob_validate.mjs  make_diary_template.mjs
skill/: SKILL.md
specs/: cli_packaging.spec.md  combination_library.spec.md  cycle_hormone.spec.md  daily_scheme.spec.md  energy_balance.spec.md  fitstrong_score.spec.md  fodmap_load.spec.md  intake_templates.spec.md  macro_targets.spec.md  microbiome_score.spec.md  models.spec.md  report_artifacts.spec.md  report_engine.spec.md  trigger_detection.spec.md
src/fit_strong/: cli.py  (+7 more)
templates/: voedingsdagboek_template.docx  voedingsdagboek_template_man.docx  voedingsdagboek_template_vrouw.docx
tests/: test_cli_packaging.py  test_combination_library.py  test_cycle_hormone.py  test_daily_scheme.py  test_energy_balance.py  test_engine.py  test_fitstrong_score.py  test_fodmap_load.py  test_fodmap_meal_docs.py  test_intake_templates.py  test_macro_targets.py  test_microbiome_score.py  test_models.py  test_report_artifacts.py  test_trigger_detection.py
video/: README.md  package-lock.json  package.json  props.example.json  tsconfig.json
(+15 files in other folders)
